
[project]
name = "lidartools"
version = "0.1.0"
description = "Assorted tools to working with LIDAR observations from BCO"
authors = [
    {name = "leifdenby", email = "leif@denby.eu"},
]
dependencies = [
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
