[metadata]
name = lidartools
version = attr: lidartools.__version__
author = Leif Denby
author_email = leif@denby.eu
description = tools for analysing LIDAR obs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/lidartools

[options]
packages=find:
install_requires =
    xarray
    netcdf4

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
lint =
  flake8
  black==21.9b0
dev =
  %(test)s
  %(lint)s
  ipython
